fix in one place, break in other, fix (#552)

--- a/packages/lab/style/base.css
+++ b/packages/lab/style/base.css
@@ -191,7 +191,7 @@
 
 .mercury-right-topbar {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 5px;
   z-index: 3;
   display: none;
@@ -297,7 +297,7 @@
 }
 
 .mercury-right-top-panel.mercury-right-top-panel-with-sidebar-toggle {
-  padding-left: 40px;
+  padding-left: 5px;
 }
 
 .mercury-right-bottom-panel {
